[gd_scene load_steps=6 format=2]

[ext_resource path="res://Elementos/Visuais/Botoes/BotaoSolto3x3.svg" type="Texture" id=1]
[ext_resource path="res://Elementos/Visuais/Botoes/BotaoSelecionado3x3.svg" type="Texture" id=2]
[ext_resource path="res://Elementos/Visuais/Icones/Padrao.svg" type="Texture" id=3]
[ext_resource path="res://Codigos/BotaoQuadrado.gd" type="Script" id=4]
[ext_resource path="res://Elementos/Sonoros/Cliques/Clicar.wav" type="AudioStream" id=5]

[node name="BotaoQuadrado" type="TextureButton"]
margin_right = 141.0
margin_bottom = 154.0
keep_pressed_outside = true
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icone" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -17.0
texture = ExtResource( 3 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Som" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="button_down" from="." to="." method="_on_BotaoQuadrado_Selecionado"]
[connection signal="button_up" from="." to="." method="_on_BotaoQuadrado_Solto"]
[connection signal="pressed" from="." to="." method="_on_BotaoQuadrado_Comando"]
[connection signal="toggled" from="." to="." method="_on_BotaoQuadrado_Modo"]
